Object_Profile/objects/Apttus_Proposal__Proposal_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Perpetual</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Time &amp; Materials</fullName>
                </value>
                <value>
                    <fullName>Fixed Price</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Reinstatement</fullName>
                </value>
                <value>
                    <fullName>Projects</fullName>
                </value>
                <value>
                    <fullName>New Support Package</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost2__c</fullName>
        <label>Cost2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESS_Use_Named_User__c</fullName>
        <label>ESS Use Named User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclude_on_Proposal_output__c</fullName>
        <formula>IF(NOT(ISBLANK(Apttus_QPConfig__OptionId__c)), Apttus_QPConfig__OptionId__r.Exclude_on_Proposal_output__c ,IF(NOT(ISBLANK( Apttus_Proposal__Product__c )), Apttus_Proposal__Product__r.Exclude_on_Proposal_output__c ,false))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exclude on Proposal output ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extended_Base_Price__c</fullName>
        <formula>Apttus_QPConfig__BaseExtendedPrice__c  /  Apttus_QPConfig__Quantity2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Base Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Full_Use_Named_User__c</fullName>
        <label>Full Use Named User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GWh_of_Retail__c</fullName>
        <label>GWh of Retail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>401 – 880</fullName>
                </value>
                <value>
                    <fullName>251 – 400</fullName>
                </value>
                <value>
                    <fullName>&lt; 250</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Driver__c</fullName>
        <label>License Driver</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Base Metals / Bulk Metals KTPA</fullName>
                </value>
                <value>
                    <fullName>Coal / Bulk Ore MTPA</fullName>
                </value>
                <value>
                    <fullName>Concurrent Processes</fullName>
                </value>
                <value>
                    <fullName>Concurrent User</fullName>
                </value>
                <value>
                    <fullName>CPU Cores</fullName>
                </value>
                <value>
                    <fullName>Customer/Deal</fullName>
                </value>
                <value>
                    <fullName>Customer Count</fullName>
                </value>
                <value>
                    <fullName>Devices</fullName>
                </value>
                <value>
                    <fullName>Equipment Monitors</fullName>
                </value>
                <value>
                    <fullName>Facility</fullName>
                </value>
                <value>
                    <fullName>Fixed Fee</fullName>
                </value>
                <value>
                    <fullName>Instance</fullName>
                </value>
                <value>
                    <fullName>Load Flow Buses</fullName>
                </value>
                <value>
                    <fullName>Load Zones</fullName>
                </value>
                <value>
                    <fullName>Meters</fullName>
                </value>
                <value>
                    <fullName>Named User</fullName>
                </value>
                <value>
                    <fullName>Pages per Year</fullName>
                </value>
                <value>
                    <fullName>Per Module</fullName>
                </value>
                <value>
                    <fullName>Points</fullName>
                </value>
                <value>
                    <fullName>Portfolio Capacity MWs</fullName>
                </value>
                <value>
                    <fullName>Precious Metals KOzPA</fullName>
                </value>
                <value>
                    <fullName>Asset Count</fullName>
                </value>
                <value>
                    <fullName>Pages</fullName>
                </value>
                <value>
                    <fullName>Production Instance</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Reactor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Metric_MineScape__c</fullName>
        <label>License Metric - MineScape</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Named User</fullName>
                </value>
                <value>
                    <fullName>Session User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Limited_Use_Named_User__c</fullName>
        <label>Limited Use Named User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MW_of_Generation__c</fullName>
        <label>MW of Generation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2751 – 5000</fullName>
                </value>
                <value>
                    <fullName>1251 – 2750</fullName>
                </value>
                <value>
                    <fullName>426 – 1250</fullName>
                </value>
                <value>
                    <fullName>151 – 425</fullName>
                </value>
                <value>
                    <fullName>76 – 150</fullName>
                </value>
                <value>
                    <fullName>&lt; 75</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maintenance_percentage__c</fullName>
        <formula>IF(CONTAINS(TEXT( Apttus_Proposal__Product__r.Product_Line_L1__c ),&quot;nMarket&quot;),&apos;40%&apos;,&apos;22%&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maintenance percentage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Price_Template__c</fullName>
        <formula>Apttus_QPConfig__NetPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Price Template</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Standard_License_Metric_Pic_Val__c</fullName>
        <label>Non-Standard License Metric</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assets</fullName>
                </value>
                <value>
                    <fullName>Catalogues</fullName>
                </value>
                <value>
                    <fullName>Concurrent Processes</fullName>
                </value>
                <value>
                    <fullName>Concurrent Users</fullName>
                </value>
                <value>
                    <fullName>Cores</fullName>
                </value>
                <value>
                    <fullName>CPUs</fullName>
                </value>
                <value>
                    <fullName>Customers</fullName>
                </value>
                <value>
                    <fullName>Devices</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Equipment Monitors</fullName>
                </value>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>Fixed Fee - Quantity 1</fullName>
                </value>
                <value>
                    <fullName>Forecast Points</fullName>
                </value>
                <value>
                    <fullName>Full Use Named Users</fullName>
                </value>
                <value>
                    <fullName>Instances</fullName>
                </value>
                <value>
                    <fullName>Inventory Users</fullName>
                </value>
                <value>
                    <fullName>KOzPA</fullName>
                </value>
                <value>
                    <fullName>KTPA</fullName>
                </value>
                <value>
                    <fullName>Limited Use Named Users</fullName>
                </value>
                <value>
                    <fullName>Load Flow Buses</fullName>
                </value>
                <value>
                    <fullName>Load Zones</fullName>
                </value>
                <value>
                    <fullName>Markets</fullName>
                </value>
                <value>
                    <fullName>Meters</fullName>
                </value>
                <value>
                    <fullName>MTPA</fullName>
                </value>
                <value>
                    <fullName>Named Dispatch Users</fullName>
                </value>
                <value>
                    <fullName>Named Mobile Users</fullName>
                </value>
                <value>
                    <fullName>Named Users</fullName>
                </value>
                <value>
                    <fullName>Non-Production Instance</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>Pages</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Standard_License_Metric__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Standard License Metric</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>IF(NOT(ISBLANK(Apttus_QPConfig__OptionId__c)),Apttus_QPConfig__OptionId__r.Name,Apttus_Proposal__Product__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_for_Template__c</fullName>
        <formula>Apttus_QPConfig__Quantity2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity for Template</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Stream_Sub_Type__c</fullName>
        <label>Revenue Stream Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Management</fullName>
                </value>
                <value>
                    <fullName>Cyber Security</fullName>
                </value>
                <value>
                    <fullName>Integration Services</fullName>
                </value>
                <value>
                    <fullName>New Logo</fullName>
                </value>
                <value>
                    <fullName>Organizational Change Management</fullName>
                </value>
                <value>
                    <fullName>Reporting Services</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Partner Lead Services</fullName>
                </value>
                <value>
                    <fullName>Partner Subcontract Services</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Stream_Type__c</fullName>
        <label>Revenue Stream Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Additional Licenses</fullName>
                </value>
                <value>
                    <fullName>Additional Licenses/Services</fullName>
                </value>
                <value>
                    <fullName>Adoption Services</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Consulting Services</fullName>
                </value>
                <value>
                    <fullName>Customer Funded Development</fullName>
                </value>
                <value>
                    <fullName>Delivery Services</fullName>
                </value>
                <value>
                    <fullName>Extension (+1 or +2 option)</fullName>
                </value>
                <value>
                    <fullName>Extension (other)</fullName>
                </value>
                <value>
                    <fullName>Facilities Management</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Integration &amp; Reporting Services</fullName>
                </value>
                <value>
                    <fullName>IT Outsourcing</fullName>
                </value>
                <value>
                    <fullName>Mix of Options</fullName>
                </value>
                <value>
                    <fullName>Net New Service</fullName>
                </value>
                <value>
                    <fullName>New Product</fullName>
                </value>
                <value>
                    <fullName>Partner Services</fullName>
                </value>
                <value>
                    <fullName>Product Optimization Package</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Support Packages</fullName>
                </value>
                <value>
                    <fullName>Training Services</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Stream__c</fullName>
        <label>Revenue Stream</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Licenses</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Managed Services</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>SaaS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tenancy__c</fullName>
        <label>Tenancy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Multi-Tenant</fullName>
                </value>
                <value>
                    <fullName>Sole Tenant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <description>The start date and end date is used to called the term duration of the licensed products</description>
        <formula>Round((Apttus_QPConfig__EndDate__c  - Apttus_QPConfig__StartDate__c)/30.5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>